# YPBrief

./: .dockerignore  .gitignore  Dockerfile  README-en.md  README-inside.md  README-zh.md  README.md  docker-compose.yml  docker-entrypoint.sh  key.env.example  prompts.example.yaml  pyproject.toml  run.bat  sources.example.yaml  sources.yaml
.github/workflows/: github-actions-daily.yml
examples/: Daily Report-Invest Daily Report-260428-en.md  Daily Report-Invest Daily Report-260428-zh.md  Video Summary-Invest Like The Best - Legendary Trader Paul Tudor Jones on AI Risk, Bubbles and Buffett - 260428-en.md  Video Summary-Invest Like The Best - Legendary Trader Paul Tudor Jones on AI Risk, Bubbles and Buffett - 260428-zh.md
scripts/: __init__.py  github_actions_daily.py  tee_run.py
src/ypbrief/: __init__.py  archive.py  cleaner.py  cli.py  config.py  daily.py  database.py  delivery.py  exporter.py  llm.py  logging_config.py  prompts.py  provider_config.py  provider_defaults.py  scheduler.py  sources.py  summarizer.py  text_normalization.py  transcripts.py  utils.py  video_processor.py  youtube.py
tests/: test_api.py  test_archive_service.py  test_cleaner.py  test_cli.py  test_config.py  test_daily.py  test_database.py  test_delivery.py  test_deployment_artifacts.py  test_exporter.py  test_github_actions_daily.py  test_llm_providers.py  test_prompts.py  test_provider_config.py  test_sources.py  test_summarizer.py  test_transcripts.py  test_video_processor.py  test_youtube_client.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  (+4 more)
(+2 files in other folders)
